# vshmup-sdl

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh
data/atlas/: atlas.json
src/: common.h  defs.h  main.c  structs.h
src/game/: bullets.c  bullets.h  effects.c  effects.h  entities.c  entities.h  game.c  game.h  highscores.c  highscores.h  hud.c  hud.h  player.c  player.h  pointsPod.c  pointsPod.h  powerUpPod.c  powerUpPod.h  sidearm.c  sidearm.h  stage.c  stars.c  stars.h  straightAlien.c  straightAlien.h  supplyShip.c  supplyShip.h  swingingAlien.c  swingingAlien.h  swoopingAlien.c  swoopingAlien.h  wave.c  wave.h
src/system/: atlas.c  atlas.h  draw.c  draw.h  init.c  init.h  input.c  text.c  text.h  textures.c  textures.h  util.c  util.h
