CMake_Minimum_Required (VERSION 3.23)
Project(
    vshmup-sdl
    VERSION 1.0
    DESCRIPTION "SDL2 Vertical Shmup"
)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")

file(GLOB SOURCES
    src/defs.h src/structs.h
    src/*.c src/*.h
    src/*/*.c src/*/*.h
)

add_executable(${PROJECT_NAME} ${SOURCES})

# ── Compiler warnings ─────────────────────────────────────────────────────────
if(MSVC)
    target_compile_definitions(${PROJECT_NAME} PRIVATE _CRT_SECURE_NO_WARNINGS)
    target_compile_options(${PROJECT_NAME} PRIVATE
        /W4 /WX
        /wd4100   # unreferenced parameter
        /wd4244   # float/int conversion
        /wd4305   # double to float
        /wd4996   # unsafe CRT functions
        /wd4232   # dllimport address (cJSON malloc/free)
        /wd4267   # size_t to int (cJSON)
        /wd4018   # signed/unsigned mismatch (main.c)
    )
else()
    target_compile_options(${PROJECT_NAME} PRIVATE
        -Wall -Wempty-body -Werror -Warray-bounds -g
        $<$<COMPILE_LANGUAGE:C>:-Wstrict-prototypes -Werror=uninitialized>
    )
endif()

# ── SDL2 Linking ──────────────────────────────────────────────────────────
if(MSVC)
    set(SDL2_VC_ROOT       "C:/sdl/SDL2-2.32.8-VC")
    set(SDL2_MIXER_VC_ROOT "C:/sdl/SDL2_mixer-2.8.2-VC")
    set(SDL2_IMAGE_VC_ROOT "C:/sdl/SDL2_image-2.8.12-VC")
    set(SDL2_TTF_VC_ROOT   "C:/sdl/SDL2_ttf-2.24.0-VC")

    target_include_directories(${PROJECT_NAME} PRIVATE
        "${SDL2_VC_ROOT}/include"
        "${SDL2_MIXER_VC_ROOT}/include"
        "${SDL2_IMAGE_VC_ROOT}/include"
        "${SDL2_TTF_VC_ROOT}/include"
    )
    target_link_libraries(${PROJECT_NAME} PRIVATE
        "${SDL2_VC_ROOT}/lib/x64/SDL2main.lib"
        "${SDL2_VC_ROOT}/lib/x64/SDL2.lib"
        "${SDL2_IMAGE_VC_ROOT}/lib/x64/SDL2_image.lib"
        "${SDL2_MIXER_VC_ROOT}/lib/x64/SDL2_mixer.lib"
        "${SDL2_TTF_VC_ROOT}/lib/x64/SDL2_ttf.lib"
    )

    target_link_options(${PROJECT_NAME} PRIVATE /SUBSYSTEM:WINDOWS)

    target_compile_definitions(${PROJECT_NAME} PRIVATE
        _CRT_SECURE_NO_WARNINGS
    )
    # cJSON is third-party — give it its own relaxed flags
    set_source_files_properties(src/json/cJSON.c PROPERTIES
        COMPILE_OPTIONS "/W0"  # silence all warnings for this file
    )
    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${SDL2_VC_ROOT}/lib/x64/SDL2.dll"
            "${SDL2_IMAGE_VC_ROOT}/lib/x64/SDL2_image.dll"
            "${SDL2_MIXER_VC_ROOT}/lib/x64/SDL2_mixer.dll"
            "${SDL2_TTF_VC_ROOT}/lib/x64/SDL2_ttf.dll"
            $<TARGET_FILE_DIR:${PROJECT_NAME}>
    )

elseif(MINGW)
    set(SDL2_ROOT       "C:/sdl/SDL2-2.32.2/x86_64-w64-mingw32")
    set(SDL2_MIXER_ROOT "C:/sdl/SDL2_mixer-2.8.0/x86_64-w64-mingw32")
    set(SDL2_IMAGE_ROOT "C:/sdl/SDL2_image-2.8.12/x86_64-w64-mingw32")
    set(SDL2_TTF_ROOT   "C:/sdl/SDL2_ttf-2.24.0/x86_64-w64-mingw32")

    target_include_directories(${PROJECT_NAME} PRIVATE
        "${SDL2_ROOT}/include/SDL2"
        "${SDL2_MIXER_ROOT}/include/SDL2"
        "${SDL2_IMAGE_ROOT}/include/SDL2"
        "${SDL2_TTF_ROOT}/include/SDL2"
    )
    target_link_libraries(${PROJECT_NAME} PRIVATE
        mingw32
        "${SDL2_ROOT}/lib/libSDL2main.a"
        "${SDL2_ROOT}/lib/libSDL2.dll.a"
        "${SDL2_IMAGE_ROOT}/lib/libSDL2_image.dll.a"
        "${SDL2_MIXER_ROOT}/lib/libSDL2_mixer.dll.a"
        "${SDL2_TTF_ROOT}/lib/libSDL2_ttf.dll.a"
    )
    target_link_options(${PROJECT_NAME} PRIVATE -mwindows)

    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${SDL2_ROOT}/bin/SDL2.dll"
            "${SDL2_IMAGE_ROOT}/bin/SDL2_image.dll"
            "${SDL2_MIXER_ROOT}/bin/SDL2_mixer.dll"
            "${SDL2_TTF_ROOT}/bin/SDL2_ttf.dll"
            $<TARGET_FILE_DIR:${PROJECT_NAME}>
    )

elseif(APPLE)
    execute_process(
        COMMAND brew --prefix
        OUTPUT_VARIABLE BREW_PREFIX
        OUTPUT_STRIP_TRAILING_WHITESPACE
    )
    set(ENV{PKG_CONFIG_PATH} "${BREW_PREFIX}/lib/pkgconfig:$ENV{PKG_CONFIG_PATH}")

    find_package(PkgConfig REQUIRED)
    pkg_check_modules(SDL2 REQUIRED sdl2)

    target_include_directories(${PROJECT_NAME} PRIVATE
        "${BREW_PREFIX}/include/SDL2"
    )

    target_link_libraries(${PROJECT_NAME} PRIVATE
        ${SDL2_LIBRARIES}
        "${BREW_PREFIX}/lib/libSDL2_image.dylib"
        "${BREW_PREFIX}/lib/libSDL2_mixer.dylib"
        "${BREW_PREFIX}/lib/libSDL2_ttf.dylib"
    )

    target_link_directories(${PROJECT_NAME} PRIVATE
        "${BREW_PREFIX}/lib"
    )

    target_compile_options(${PROJECT_NAME} PRIVATE
        -Wall -Wempty-body -Werror -Warray-bounds -g
        $<$<COMPILE_LANGUAGE:C>:-Wstrict-prototypes -Werror=uninitialized>
    )
    set_target_properties(${PROJECT_NAME} PROPERTIES
        INSTALL_RPATH "@executable_path;@loader_path"
        BUILD_WITH_INSTALL_RPATH TRUE
        MACOSX_RPATH TRUE
    )
else()
    # Linux
    find_package(SDL2 REQUIRED)
    find_package(SDL2_image REQUIRED)
    find_package(SDL2_mixer REQUIRED)
    find_package(SDL2_ttf REQUIRED)

    target_include_directories(${PROJECT_NAME} PRIVATE ${SDL2_INCLUDE_DIRS})

    target_link_libraries(${PROJECT_NAME} PRIVATE
        SDL2::SDL2
        SDL2_image::SDL2_image
        SDL2_mixer::SDL2_mixer
        SDL2_ttf::SDL2_ttf
    )

    target_compile_options(${PROJECT_NAME} PRIVATE
        -Wall -Wempty-body -Werror -Warray-bounds -g
        $<$<COMPILE_LANGUAGE:C>:-Wstrict-prototypes -Werror=uninitialized>
    )
    set_target_properties(${PROJECT_NAME} PROPERTIES
        INSTALL_RPATH "$ORIGIN"
        BUILD_WITH_INSTALL_RPATH TRUE
    )
endif()

install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
